# cmc_cg_template

./: .gitmodules  CMakeLists.txt
data/: CMakeLists.txt
data/shaders/: debug_normal.frag  debug_normal.vert  tonemap_reinhard.frag  tonemap_reinhard.vert
src/: CMakeLists.txt  main.cpp
src/gfx/: camera.cpp  camera.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h
src/gui/: imgui_log_window.cpp  imgui_log_window.h
src/imgui_impl/: imgui_impl_opengl3.cpp
src/util/: Config.h.inl  config.cpp  config.h  logger.cpp  logger.h  sceneloader.cpp  sceneloader.h
